fix: fixed overlaping problem in CalculatorSection.module.scss

--- a/app/Components/CalculatorSection/CalculatorSection.module.scss
+++ b/app/Components/CalculatorSection/CalculatorSection.module.scss
@@ -75,3 +75,15 @@
   font-weight: 500;
   color: #545454;
 }
+
+@media (max-width: 768px) {
+  .calculatorSectionWrapper {
+    height: auto;
+    min-height: 100svh;
+    gap: 28px;
+  }
+
+  .cardsContainer {
+    justify-content: center;
+  }
+}
